# pitcher-narratives

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  METHODOLOGY.md  Makefile  README.md  blog-post.md  context.py  data.py  engine.py  main.py  pyproject.toml  report.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-data-pipeline-classification/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-fastball-arsenal-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-execution-context-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-report-generation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/pitcher_narratives/: __init__.py  cli.py  context.py  curator.py  data.py  engine.py  report.py  scout.py  scout_cli.py
tests/: test_cli.py  test_context.py  test_data.py  test_engine.py  test_report.py
(+32 files in other folders)
