[project]
name = "pitcher-narratives"
version = "0.1.0"
description = "LLM-powered MLB scouting reports from Statcast data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.39.3",
    "pydantic-ai>=1.72.0",
    "pydantic-ai-slim[google]>=1.72.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
pitcher-narratives = "pitcher_narratives.cli:main"
pitcher-scout = "pitcher_narratives.scout_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitcher_narratives"]

[dependency-groups]
dev = [
    "pre-commit>=4.2",
    "pytest>=9.0.2",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py313"
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
